--- a/src/styles/route-styles/CollectionDetail.module.scss
+++ b/src/styles/route-styles/CollectionDetail.module.scss
@@ -2,10 +2,15 @@
 
 .TopImage {
   width: 100%;
-  height: 60vh;
+  height: 600px;
+  object-fit: cover;
 }
 .ProductList {
+  max-width: 1200px;
+  margin: 0 auto;
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
+  grid-template-columns: repeat(3, minmax(350px, 400px));
+  grid-template-rows: repeat(3, minmax(350px, auto));
   column-gap: 2rem;
+  justify-items: center;
 }
