--- a/src/components/client/Header.client/Header.module.scss
+++ b/src/components/client/Header.client/Header.module.scss
@@ -1,1 +1,34 @@
 @import "/src/styles/sass/utils";
+.Header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 4rem;
+  padding: 0 1rem;
+}
+
+.CartButton {
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: white;
+  border: none;
+}
+
+.IconBag {
+  width: 1.25rem;
+  height: 1.25rem;
+}
+.CartBadge {
+  position: absolute;
+  bottom: 0.25rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 0.75rem;
+  width: auto;
+  font-size: 0.625rem;
+  line-break: 1;
+  text-align: center;
+}
