--- a/src/components/client/Drawer.client/Drawer.module.scss
+++ b/src/components/client/Drawer.client/Drawer.module.scss
@@ -6,6 +6,7 @@
   right: 0;
   top: 0;
   height: 100%;
+  padding: 0 0.5rem 2rem 0.5rem;
   width: 250px;
   background-color: white;
   overscroll-behavior: contain;
