--- a/src/styles/sass/abstracts/_variables.scss
+++ b/src/styles/sass/abstracts/_variables.scss
@@ -6,3 +6,7 @@ $chocolate: #593a01;
 $grape: #a69b03;
 $olive: #595302;
 $error: #fa6927;
+$rich-black: #010203;
+
+//
+$helvetica: "Helvetica Neue", Helvetica, Arial, sans-serif;
