--- a/src/components/client/CartDetails.client/CartDetails.module.scss
+++ b/src/components/client/CartDetails.client/CartDetails.module.scss
@@ -17,6 +17,8 @@
     width: 100%;
     color: white;
     text-transform: uppercase;
+    font-weight: 600;
+    padding: 0.5rem;
   }
 }
 // CartCheckoutActions
