Add PurchaseMarkup component to product details page, with buy now and add to cart buttons

--- a/src/components/client/CartDetails.client/CartDetails.module.scss
+++ b/src/components/client/CartDetails.client/CartDetails.module.scss
@@ -22,6 +22,12 @@
   }
 }
 // CartCheckoutActions
+.CheckoutActions {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+}
 // OrderSummary
 // CartLineItems
 // CartLineQuantAdj
