Order summary finished

--- a/src/components/client/CartDetails.client/CartDetails.module.scss
+++ b/src/components/client/CartDetails.client/CartDetails.module.scss
@@ -43,5 +43,17 @@
   width: 100%;
 }
 // OrderSummary
+.OrderSummary {
+  & > div {
+    display: flex;
+    justify-content: space-between;
+  }
+  & dt {
+    text-transform: capitalize;
+  }
+  & .Shipping {
+    color: green;
+  }
+}
 // CartLineItems
 // CartLineQuantAdj
