--- a/src/components/client/CartDetails.client/CartDetails.module.scss
+++ b/src/components/client/CartDetails.client/CartDetails.module.scss
@@ -11,8 +11,16 @@
   padding: 0.6rem 0.4rem;
 }
 // CartDetails
+.CartDetails {
+  display: flex;
+  min-height: calc(100vh - 4rem);
+  flex-direction: column;
+}
 .CartList {
-  padding: 0;
+  flex: 1;
+  & ul {
+    padding: 0;
+  }
 }
 // CartEmpty
 .CartEmpty {
@@ -61,11 +69,61 @@
 // CartLineItems
 .LiItem {
   display: flex;
+  flex-wrap: wrap;
   justify-content: space-between;
+  gap: 1rem;
+  margin-bottom: 1rem;
+  padding-bottom: 1rem;
+  border-bottom: 1px lightgray solid;
+  &__imageBlock {
+    flex: 1 1 30%;
+  }
   &__image {
     height: 100px;
     width: 100px;
     object-fit: cover;
   }
+  &__details {
+    flex: 1 1 60%;
+    text-align: right;
+  }
+  &__adjust {
+    flex: 1 1 60%;
+    display: flex;
+    gap: 1rem;
+  }
+  &__remove {
+    border: 1px lightgray solid;
+    border-radius: 5px;
+  }
+  &__price {
+    flex: 1 1 30%;
+    text-align: right;
+  }
 }
 // CartLineQuantAdj
+.QuAdj {
+  display: flex;
+  position: relative;
+  align-items: center;
+  justify-content: space-between;
+  border: 1px lightgray solid;
+  border-radius: 5px;
+  &__label {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    padding: 0;
+    margin: -1px;
+    overflow: hidden;
+    clip: rect(0, 0, 0, 0);
+    white-space: nowrap;
+    border-width: 0;
+  }
+  &__dec {
+  }
+  &__inc {
+  }
+  &__quant {
+  }
+}
